aligned fixes

--- a/src/components/darkmode.css
+++ b/src/components/darkmode.css
@@ -70,6 +70,8 @@
 .dark-mode .search {
   background-color: #1a1919;
   color:aliceblue !important;
+  margin-left: auto;
+  margin-right: auto;
   transition: background-color 0.3s ease;
 }
 .dark-mode .button {
